--- a/index.html
+++ b/index.html
@@ -22,22 +22,48 @@
             line-height: 1.6;
         }
 
-        /* Light Mode */
+        /* Light Mode Updates */
         body.light { 
-            background: #f4f4f4; 
-            color: #111; 
+            background: #f8fafc; 
+            color: #1e293b; 
         }
         body.light section { 
-            background: rgba(255,255,255,0.9); 
-            color: #111; 
+            background: rgba(255,255,255,0.95); 
+            color: #1e293b;
+            border: 1px solid rgba(0, 114, 255, 0.1);
         }
         body.light .navbar { 
-            background: rgba(255,255,255,0.8); 
+            background: rgba(255,255,255,0.9); 
+            color: #1e293b;
         }
         body.light .hero-title {
             background: linear-gradient(90deg,#8e2de2,#0072ff);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+        }
+        body.light .hero-subtitle {
+            color: #475569;
+        }
+        body.light .hero-overlay {
+            background: rgba(255,255,255,0.9);
+            color: #1e293b;
+        }
+        body.light .card {
+            background: rgba(255,255,255,0.95);
+            color: #1e293b;
+        }
+        body.light .card h3 {
+            color: #0072ff;
+        }
+        body.light .card p {
+            color: #475569;
+        }
+        body.light .resource-card {
+            background: rgba(255,255,255,0.95);
+            color: #1e293b;
+        }
+        body.light .resource-card p {
+            color: #475569;
         }
         body.light .market-ticker {
             background: rgba(255,255,255,0.95);
@@ -45,7 +71,42 @@
         }
         body.light .modal-content {
             background: #ffffff;
-            color: #111;
+            color: #1e293b;
+        }
+
+        /* Additional Professional Text Styling */
+        .nav-btn, .toggle-btn {
+            background: linear-gradient(90deg, #0072ff, #8e2de2);
+            color: white; 
+            padding: 12px 24px; 
+            border-radius: 25px;
+            text-decoration: none; 
+            font-weight: 600; 
+            transition: all 0.3s ease;
+            margin-left: 15px; 
+            cursor: pointer; 
+            border: none;
+            position: relative; 
+            overflow: hidden;
+        }
+
+        .resources-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 25px;
+            margin-top: 40px;
+        }
+
+        /* Professional Footer */
+        footer { 
+            text-align: center; 
+            padding: 30px 20px; 
+            background: rgba(0,0,0,0.9); 
+            border-top: 1px solid rgba(0, 114, 255, 0.2); 
+            font-size: 0.95rem; 
+            color: #94a3b8;
+            position: relative; 
+            margin-top: 50px;
         }
 
         /* Enhanced Background */
@@ -219,12 +280,17 @@
             margin-top: 40px; /* Account for ticker */
         }
         #chart { 
-            position:absolute; top:0; left:0; width:100%; height:100%; 
-            z-index:0; opacity:0.5;
+            position:absolute; top:-100px; left:0; width:100%; height:130%; 
+            z-index:1; opacity:0.4;
         }
         .hero-overlay { 
             position:relative; z-index:2; max-width:900px; padding: 0 20px;
             animation:fadeInZoom 2s ease forwards; 
+            background: rgba(0, 15, 30, 0.7);
+            border-radius: 20px;
+            padding: 40px 30px;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(0, 114, 255, 0.2);
         }
         @keyframes fadeInZoom { 
             from{opacity:0; transform:translateY(30px) scale(0.95);} 
@@ -248,25 +314,28 @@
 
         /* Free Resources Section */
         .free-resources {
-            background: rgba(16, 185, 129, 0.05);
-            border: 1px solid rgba(16, 185, 129, 0.2);
+            background: rgba(16, 185, 129, 0.08);
+            border: 1px solid rgba(16, 185, 129, 0.3);
+            color: #e2e8f0;
         }
 
-        .resources-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px;
-            margin-top: 40px;
+        .free-resources h2 {
+            color: #f0f9ff;
+        }
+
+        .free-resources p {
+            color: #cbd5e1;
         }
 
         .resource-card {
-            background: rgba(255,255,255,0.08);
+            background: rgba(15,23,42,0.9);
             padding: 30px;
             border-radius: 12px;
-            border: 1px solid rgba(255,255,255,0.1);
+            border: 1px solid rgba(0, 114, 255, 0.2);
             transition: all 0.3s ease;
             text-align: center;
             cursor: pointer;
+            color: #e2e8f0;
         }
 
         .resource-card:hover {
@@ -280,6 +349,11 @@
             font-size: 1.3rem;
             margin-bottom: 15px;
             font-weight: 600;
+        }
+
+        .resource-card p {
+            color: #cbd5e1;
+            line-height: 1.6;
         }
 
         .curriculum-highlight {
@@ -645,11 +719,12 @@
             gap:25px; margin-top:40px; 
         }
         .card { 
-            background:rgba(255,255,255,0.08); 
+            background:rgba(15,23,42,0.9); 
             padding:30px 25px; border-radius:15px; 
             transition: all 0.4s ease;
-            border:1px solid rgba(255,255,255,0.1);
+            border:1px solid rgba(0, 114, 255, 0.2);
             position: relative; overflow: hidden;
+            color: #e2e8f0;
         }
         
         .card::before {
@@ -662,13 +737,18 @@
         .card:hover::before { opacity: 1; }
         .card:hover { 
             transform:translateY(-10px) scale(1.02); 
-            box-shadow:0 15px 30px rgba(142, 45, 226, 0.3);
+            box-shadow:0 15px 30px rgba(0, 114, 255, 0.3);
             border-color: rgba(0, 114, 255, 0.5);
         }
         
         .card h3 {
             font-size: 1.3rem; margin-bottom: 15px;
-            color: #00d4ff; font-weight: 600;
+            color: #3b82f6; font-weight: 600;
+        }
+
+        .card p {
+            color: #cbd5e1;
+            line-height: 1.6;
         }
 
         /* Enhanced Journey */
@@ -828,23 +908,89 @@
             51%, 100% { border-color: #00d4ff; }
         }
 
-        /* Responsive Design */
+        /* Responsive Design - Enhanced Mobile UI */
         @media (max-width: 768px) {
             .navbar { padding: 12px 20px; }
             .market-ticker { display: none; }
-            .hero { margin-top: 0; }
-            .hero-title { font-size: 2.2rem; }
-            section { padding: 60px 20px; margin: 30px 15px; }
+            .hero { margin-top: 0; height: 100vh; }
+            .hero-title { 
+                font-size: 2.2rem; 
+                color: #f0f9ff;
+                text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+            }
+            .hero-subtitle {
+                font-size: 1.1rem;
+                color: #cbd5e1;
+                opacity: 1;
+            }
+            .hero-overlay {
+                padding: 30px 20px;
+                margin: 0 10px;
+                background: rgba(0, 15, 30, 0.85);
+            }
+            section { 
+                padding: 60px 20px; 
+                margin: 30px 15px; 
+                background: rgba(15,23,42,0.9);
+                color: #e2e8f0;
+            }
+            section h2 {
+                font-size: 1.8rem;
+                color: #f0f9ff;
+            }
+            section p {
+                color: #cbd5e1;
+                font-size: 1rem;
+            }
             .cards { grid-template-columns: 1fr; gap: 20px; }
+            .card {
+                background: rgba(15,23,42,0.95);
+                color: #e2e8f0;
+                border: 1px solid rgba(0, 114, 255, 0.3);
+            }
+            .card h3 {
+                color: #3b82f6;
+            }
+            .card p {
+                color: #cbd5e1;
+            }
             .resources-grid { grid-template-columns: 1fr; gap: 20px; }
+            .resource-card {
+                background: rgba(15,23,42,0.95);
+                color: #e2e8f0;
+            }
+            .resource-card h3 {
+                color: #10b981;
+            }
+            .resource-card p {
+                color: #cbd5e1;
+            }
             .journey { 
                 grid-template-columns: repeat(2, 1fr); 
                 gap: 15px; 
             }
+            .journey-card {
+                background: rgba(15,23,42,0.9);
+                color: #e2e8f0;
+                border: 1px solid rgba(0, 114, 255, 0.3);
+            }
+            .journey-card h3 {
+                color: #3b82f6;
+            }
+            .journey-card p {
+                color: #cbd5e1;
+            }
             .badges { flex-direction: column; align-items: center; }
+            .badge {
+                background: rgba(15,23,42,0.9);
+                color: #e2e8f0;
+                border: 1px solid rgba(0, 114, 255, 0.3);
+            }
             .modal-content { 
                 width: 95vw;
                 max-height: 95vh; 
+                background: rgba(10, 15, 30, 0.95);
+                color: #e2e8f0;
             }
             .checklist-content, .checklist-intro-section {
                 padding: 20px 15px;
@@ -1542,8 +1688,69 @@
             }
         }
     </style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
+
+<style>
+/* === TradingView-style global typography + Earth Limb background (FULL PAGE) === */
+:root{
+  --hero-image: url('https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?q=80&w=2400&auto=format&fit=crop');
+  --btn-grad: linear-gradient(90deg,#0072ff,#8e2de2);
+  --btn-shadow: 0 12px 30px rgba(0,114,255,.35);
+}
+html, body{height:100%; margin:0; background:transparent !important; color:#e5e7eb;
+  font-family: Inter, system-ui, sans-serif !important;}
+
+/* BACKGROUND LAYERS */
+body::before{
+  content:""; position:fixed; inset:0;
+  background: var(--hero-image) center/cover no-repeat;
+  transform: scale(1.02);
+  z-index:-5; pointer-events:none;
+}
+.aurora-bg{
+  position:fixed; inset:-10% -10% 0 -10%;
+  z-index:-4; pointer-events:none;
+  background:repeating-linear-gradient(90deg,rgba(147,197,253,.0) 0 60px,rgba(147,197,253,.12) 60px 120px,rgba(168,85,247,.12) 120px 180px,rgba(147,197,253,.0) 180px 240px);
+  mix-blend-mode:screen; filter:blur(20px);
+  animation:auroraSlide 18s linear infinite; background-size:240px 100%;
+}
+@keyframes auroraSlide{to{transform:translateX(-240px);}}
+body::after{
+  content:""; position:fixed; inset:0;
+  background:radial-gradient(80% 60% at 50% 40%,rgba(0,0,0,.18),rgba(0,0,0,.75));
+  z-index:-3; pointer-events:none;
+}
+
+/* GLOBAL TYPE (TradingView-ish) */
+h1,h2,h3,h4,h5,h6{
+  color:#fff !important; font-weight:900 !important;
+  letter-spacing:-.02em; line-height:1.05;
+  text-shadow:0 8px 28px rgba(0,0,0,.5);
+}
+p,li,span,small,blockquote{
+  color:#e5e7eb !important;
+  text-shadow:0 6px 22px rgba(0,0,0,.45);
+}
+
+/* BUTTONS (leave your theme intact if already gradient)—but ensure default matches */
+button,.btn,input[type=submit]{
+  border:0; border-radius:12px; padding:14px 20px;
+  font-weight:800; color:#fff !important;
+  background:var(--btn-grad); box-shadow:var(--btn-shadow);
+  cursor:pointer; transition:transform .18s, box-shadow .18s;
+}
+button:hover,.btn:hover,input[type=submit]:hover{transform:translateY(-2px); box-shadow:0 18px 44px rgba(0,114,255,.45);}
+
+/* SECTION BLOCKS set to black (as requested) */
+section{ background:#000 !important; color:#e5e7eb !important; }
+/* If any components used their own solid BGs, this keeps readability. */
+</style>
+
 </head>
 <body>
+  <div class=\"aurora-bg\" aria-hidden=\"true\"></div>
     <div id="progress-bar"></div>
 
     <!-- Market Ticker (TradingView Style) -->
@@ -1619,20 +1826,20 @@
         <h2>Free Trading Resources</h2>
         <p style="margin-bottom: 40px;">Professional trading tools and guides to get you started on the right track</p>
         <div class="resources-grid">
-            <div class="resource-card" onclick="openDailyChecklistModal()">
+            <div class="resource-card" onclick="openRegistrationModal()">
                 <h3>Daily Trading Checklist</h3>
                 <p>Pre-market analysis checklist with 15 essential points that professional traders use every morning</p>
-                <button class="resource-btn" onclick="event.stopPropagation(); openDailyChecklistModal()">Open Checklist</button>
+                <button class="resource-btn primary" onclick="event.stopPropagation(); openRegistrationModal()">Open Checklist</button>
             </div>
-            <div class="resource-card" onclick="openRiskCalculatorModal()">
+            <div class="resource-card" onclick="openRegistrationModal()">
                 <h3>Risk Calculator Tool</h3>
                 <p>Professional position sizing calculator to determine optimal trade sizes based on your account and risk tolerance</p>
-                <button class="resource-btn" onclick="event.stopPropagation(); openRiskCalculatorModal()">Open Calculator</button>
+                <button class="resource-btn primary" onclick="event.stopPropagation(); openRegistrationModal()">Open Calculator</button>
             </div>
-            <div class="resource-card" onclick="openGlobalMarketHoursModal()">
+            <div class="resource-card" onclick="openRegistrationModal()">
                 <h3>Global Market Hours</h3>
                 <p>Complete guide to forex trading sessions, overlaps, and the best times to trade different currency pairs</p>
-                <button class="resource-btn" onclick="event.stopPropagation(); openGlobalMarketHoursModal()">View Guide</button>
+                <button class="resource-btn primary" onclick="event.stopPropagation(); openRegistrationModal()">View Guide</button>
             </div>
             <div class="resource-card curriculum-highlight">
                 <h3>Complete Course Curriculum</h3>
@@ -1674,8 +1881,16 @@
                 <p>Access live market insights and real-time trade setups from experienced professionals.</p>
             </div>
             <div class="card">
-                <h3>Risk Management</h3>
+                <h3>Professional Techniques</h3>
                 <p>Professional techniques for protecting your capital and managing position sizes effectively.</p>
+            </div>
+            <div class="card">
+                <h3>Market Analysis</h3>
+                <p>Learn advanced market analysis techniques including technical indicators, chart patterns, and fundamental analysis for better trading decisions.</p>
+            </div>
+            <div class="card">
+                <h3>Trading Community</h3>
+                <p>Join our exclusive community of traders for daily insights, trade ideas, and continuous learning from experienced professionals.</p>
             </div>
         </div>
     </section>
@@ -2461,8 +2676,8 @@
     <div class="modal-overlay" id="registrationModal">
         <div class="modal-content">
             <button class="modal-close" onclick="closeRegistrationModal()">&times;</button>
-            <h2 style="margin-bottom: 20px; color: #0072ff;">Access Free Resources</h2>
-            <p style="margin-bottom: 30px; opacity: 0.9;">Register now to download all free trading resources and get access to our complete course curriculum.</p>
+            <h2 style="margin-bottom: 20px; color: #0072ff;">Registration Required</h2>
+            <p style="margin-bottom: 30px; opacity: 0.9;">Please register to access our professional trading tools including the Daily Checklist, Risk Calculator, Market Hours Guide, and Complete Course Curriculum.</p>
             <div style="display: flex; gap: 15px; justify-content: center;">
                 <a href="register.html" class="nav-btn" style="text-decoration: none;">Complete Registration</a>
                 <button onclick="closeRegistrationModal()" class="toggle-btn">Maybe Later</button>
