--- a/index.html
+++ b/index.html
@@ -281,6 +281,45 @@
             font-size: 1.2rem;
         }
 
+        /* Navigation Menu */
+        .navbar-menu {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        /* Hamburger Menu Button - Hidden on Desktop */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            padding: 5px;
+            background: none;
+            border: none;
+            transition: all 0.3s ease;
+        }
+
+        .hamburger span {
+            width: 25px;
+            height: 3px;
+            background: #fff;
+            margin: 3px 0;
+            transition: all 0.3s ease;
+            border-radius: 2px;
+        }
+
+        .hamburger.active span:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .hamburger.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(7px, -6px);
+        }
+
         /* Light mode adjustments for logo */
         body.light .brand-text {
             background: linear-gradient(135deg, #0072ff, #8e2de2);
@@ -290,6 +329,73 @@
 
         body.light .navbar-logo img {
             filter: drop-shadow(0 0 8px rgba(0, 114, 255, 0.3));
+        }
+
+        /* Mobile Responsive Design */
+        @media (max-width: 768px) {
+            .navbar {
+                padding: 12px 20px;
+                flex-wrap: wrap;
+            }
+
+            .navbar-logo {
+                gap: 8px;
+            }
+
+            .navbar-logo img {
+                height: 32px;
+            }
+
+            .brand-text {
+                font-size: 1.1rem;
+            }
+
+            /* Show hamburger on mobile */
+            .hamburger {
+                display: flex;
+            }
+
+            /* Hide menu items on mobile by default */
+            .navbar-menu {
+                display: none;
+                width: 100%;
+                flex-direction: column;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                background: rgba(10,15,30,0.98);
+                backdrop-filter: blur(15px);
+                border-top: 1px solid rgba(255,255,255,0.1);
+                padding: 20px;
+                gap: 15px;
+            }
+
+            /* Show menu when active */
+            .navbar-menu.active {
+                display: flex;
+                animation: slideDown 0.3s ease;
+            }
+
+            @keyframes slideDown {
+                from {
+                    opacity: 0;
+                    transform: translateY(-10px);
+                }
+                to {
+                    opacity: 1;
+                    transform: translateY(0);
+                }
+            }
+
+            /* Stack menu items vertically on mobile */
+            .navbar-menu .toggle-btn,
+            .navbar-menu .nav-btn {
+                width: 100%;
+                text-align: center;
+                margin: 0;
+                padding: 12px 16px;
+                font-size: 1rem;
+            }
         }
         
         .nav-btn, .toggle-btn {
